--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,13 @@
 @tailwind utilities;
 
 body {
-  background-color: #F0FBF5
+  background-color: #f0fbf5;
+}
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  color: #a8dadc;
+}
+
+.swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
+  background: #a8dadc !important;
 }
